Set up fonts, colors; create button component

--- a/src/components/button/_button.scss
+++ b/src/components/button/_button.scss
@@ -1,3 +1,48 @@
-button {
-  background-color: purple;
+.button {
+  background-color: var(--button--background-color, var(--color-primary-dark));
+  color: var(--button--text-color, var(--color-neutral-white));
+  border: 2px solid var(--button--border-color, var(--color-primary-dark));
+  border-radius: 0.6rem;
+  outline: 2px solid var(--button--outline-color, var(--color-opacity-clear));
+  outline-offset: 3px;
+  padding: 0.75rem 1.25rem;
+  font-family: var(--typography-font-buttons);
+  font-size: 1rem;
+  font-weight: 600;
+  line-height: 1;
+  letter-spacing: 0.02em;
+
+  &:hover {
+    --button--background-color: var(--color-neutral-dark);
+    --button--border-color: var(--color-neutral-dark);
+    --button--text-color: var(--color-neutral-white);
+  }
+
+  &:focus-visible {
+    --button--outline-color: var(--color-neutral-darkest);
+  }
+
+  &:active {
+    --button--background-color: var(--color-neutral-darkest);
+    --button--border-color: var(--color-neutral-darkest);
+    --button--text-color: var(--color-neutral-white);
+  }
+
+  &[disabled],
+  &[aria-disabled='true'] {
+    cursor: not-allowed;
+    --button--background-color: var(--color-neutral-light);
+    --button--border-color: var(--color-neutral-light);
+    --button--text-color: var(--color-neutral-lightest);
+
+    &:hover {
+      --button--text-color: var(--color-neutral-lightest);
+    }
+  }
+}
+
+.button--secondary {
+  --button--background-color: var(--color-neutral-white);
+  --button--text-color: var(--color-primary-dark);
+  --button--border-color: var(--color-primary-dark);
 }
