add paragraph component

--- a/src/foundations/_index.scss
+++ b/src/foundations/_index.scss
@@ -1,3 +1,7 @@
+// Stylesheet-only items.
 @forward './normalize';
 @forward './fonts';
 @forward './variables';
+
+// Foundational components.
+@forward './paragraph/paragraph';
