--- a/src/foundations/_index.scss
+++ b/src/foundations/_index.scss
@@ -4,5 +4,6 @@
 @forward './variables';
 
 // Foundational components.
+@forward './anchor/anchor';
 @forward './headings/headings';
 @forward './paragraph/paragraph';
