--- a/src/foundations/paragraph/_paragraph.scss
+++ b/src/foundations/paragraph/_paragraph.scss
@@ -1,5 +1,6 @@
 body,
 p {
+  color: var(--color-neutral-darkest);
   font-family: var(--typography-font-bodycopy);
   font-size: 1rem;
   line-height: 160%;
