--- a/src/foundations/_variables.scss
+++ b/src/foundations/_variables.scss
@@ -1,18 +1,22 @@
 // CSS global custom properties.
 
 :root {
+  // Breakpoint values.
   --breakpoint-small-max: 640px;
   --breakpoint-medium-min: 641px;
+  --breakpoint-medium-max: 1024px;
   --breakpoint-large-min: 1025px;
   --container-max-width: 1200px;
+  // Base colors.
   --color-primary-dark: #177785;
-  --color-primary-regular: #25ced1;
+  --color-primary-regular: #2ca5aa;
   --color-primary-light: #aeedee;
   --color-accent-dark: #f06630;
   --color-accent-regular: #ff8a5b;
   --color-accent-light: #feba9d;
   --color-accent-lightest: #fceade;
   --color-accent-bright: #e94967;
+  --color-accent-bright-dark: #c5304b;
   --color-neutral-darkest: #061f23;
   --color-neutral-dark: #394c50;
   --color-neutral-regular-dark: #647376;
@@ -23,6 +27,14 @@
   --color-neutral-white: #ffffff;
   --color-opacity-clear: rgba(0, 0, 0, 0);
   --color-opacity-black: rgba(0, 0, 0, 0.5);
+  // Functional colors.
+  --color-functional-focus: var(--color-accent-bright-dark);
+  --color-functional-visited: #630084;
+  --color-functional-disabled-background: var(--color-neutral-light);
+  --color-functional-disabled-text-on-background: var(--color-neutral-lightest);
+  --color-functional-disabled-text: var(--color-neutral-regular);
+  --color-functional-disabled-input: var(--color-neutral-light);
+  // Typography.
   --typography-font-headings: 'Poppins', sans-serif;
   --typography-font-bodycopy: 'Aleo', serif;
   --typography-font-buttons: 'Poppins', sans-serif;
