--- a/src/foundations/_variables.scss
+++ b/src/foundations/_variables.scss
@@ -1,12 +1,12 @@
 // CSS global custom properties.
 
 :root {
-  // Breakpoint values.
-  --breakpoint-small-max: 640px;
-  --breakpoint-medium-min: 641px;
-  --breakpoint-medium-max: 1024px;
-  --breakpoint-large-min: 1025px;
-  --container-max-width: 1200px;
+  // Grid values.
+  --grid-column-sm: 21.34375%;
+  --grid-gap-sm: 4.875%;
+  --grid-column-md: 5.125%;
+  --grid-gap-md: 3.5%;
+
   // Base colors.
   --color-primary-dark: #177785;
   --color-primary-regular: #2ca5aa;
@@ -27,6 +27,7 @@
   --color-neutral-white: #ffffff;
   --color-opacity-clear: rgba(0, 0, 0, 0);
   --color-opacity-black: rgba(0, 0, 0, 0.5);
+
   // Functional colors.
   --color-functional-focus: var(--color-accent-bright-dark);
   --color-functional-visited: #630084;
@@ -34,6 +35,7 @@
   --color-functional-disabled-text-on-background: var(--color-neutral-lightest);
   --color-functional-disabled-text: var(--color-neutral-regular);
   --color-functional-disabled-input: var(--color-neutral-light);
+
   // Typography.
   --typography-font-headings: 'Poppins', sans-serif;
   --typography-font-bodycopy: 'Aleo', serif;
@@ -41,3 +43,7 @@
 }
 
 // SASS global variables.
+$breakpoint-small-max: 640px;
+$breakpoint-medium-min: 641px;
+$breakpoint-large-min: 1025px;
+$container-max-width: 1200px;
