--- a/src/foundations/_variables.scss
+++ b/src/foundations/_variables.scss
@@ -1,45 +1,45 @@
 // CSS global custom properties.
 
 :root {
-  // Grid values.
-  --grid-column-sm: 21.34375%;
-  --grid-gap-sm: 4.875%;
-  --grid-column-md: 5.125%;
-  --grid-gap-md: 3.5%;
+	// Grid values.
+	--grid-column-sm: 21.34375%;
+	--grid-gap-sm: 4.875%;
+	--grid-column-md: 5.125%;
+	--grid-gap-md: 3.5%;
 
-  // Base colors.
-  --color-primary-dark: #177785;
-  --color-primary-regular: #2ca5aa;
-  --color-primary-light: #aeedee;
-  --color-accent-dark: #f06630;
-  --color-accent-regular: #ff8a5b;
-  --color-accent-light: #feba9d;
-  --color-accent-lightest: #fceade;
-  --color-accent-bright: #e94967;
-  --color-accent-bright-dark: #c5304b;
-  --color-neutral-darkest: #061f23;
-  --color-neutral-dark: #394c50;
-  --color-neutral-regular-dark: #647376;
-  --color-neutral-regular: #838f91;
-  --color-neutral-regular-light: #939d9f;
-  --color-neutral-light: #b2b9bb;
-  --color-neutral-lightest: #e8eaeb;
-  --color-neutral-white: #ffffff;
-  --color-opacity-clear: rgba(0, 0, 0, 0);
-  --color-opacity-black: rgba(0, 0, 0, 0.5);
+	// Base colors.
+	--color-primary-dark: #177785;
+	--color-primary-regular: #2ca5aa;
+	--color-primary-light: #aeedee;
+	--color-accent-dark: #f06630;
+	--color-accent-regular: #ff8a5b;
+	--color-accent-light: #feba9d;
+	--color-accent-lightest: #fceade;
+	--color-accent-bright: #e94967;
+	--color-accent-bright-dark: #c5304b;
+	--color-neutral-darkest: #061f23;
+	--color-neutral-dark: #394c50;
+	--color-neutral-regular-dark: #647376;
+	--color-neutral-regular: #838f91;
+	--color-neutral-regular-light: #939d9f;
+	--color-neutral-light: #b2b9bb;
+	--color-neutral-lightest: #e8eaeb;
+	--color-neutral-white: #ffffff;
+	--color-opacity-clear: rgba(0, 0, 0, 0);
+	--color-opacity-black: rgba(0, 0, 0, 0.5);
 
-  // Functional colors.
-  --color-functional-focus: var(--color-accent-bright-dark);
-  --color-functional-visited: #630084;
-  --color-functional-disabled-background: var(--color-neutral-light);
-  --color-functional-disabled-text-on-background: var(--color-neutral-lightest);
-  --color-functional-disabled-text: var(--color-neutral-regular);
-  --color-functional-disabled-input: var(--color-neutral-light);
+	// Functional colors.
+	--color-functional-focus: var(--color-accent-bright-dark);
+	--color-functional-visited: #630084;
+	--color-functional-disabled-background: var(--color-neutral-light);
+	--color-functional-disabled-text-on-background: var(--color-neutral-lightest);
+	--color-functional-disabled-text: var(--color-neutral-regular);
+	--color-functional-disabled-input: var(--color-neutral-light);
 
-  // Typography.
-  --typography-font-headings: 'Poppins', sans-serif;
-  --typography-font-bodycopy: 'Aleo', serif;
-  --typography-font-buttons: 'Poppins', sans-serif;
+	// Typography.
+	--typography-font-headings: 'Poppins', sans-serif;
+	--typography-font-bodycopy: 'Aleo', serif;
+	--typography-font-buttons: 'Poppins', sans-serif;
 }
 
 // SASS global variables.
@@ -47,3 +47,6 @@ $breakpoint-small-max: 640px;
 $breakpoint-medium-min: 641px;
 $breakpoint-large-min: 1025px;
 $container-max-width: 1200px;
+$container-padding-sm: 4%;
+$container-padding-md: 3%;
+$container-padding-lg: 3%;
