add link component

--- a/src/foundations/_variables.scss
+++ b/src/foundations/_variables.scss
@@ -9,8 +9,9 @@
 
 	// Base colors.
 	--color-primary-dark: #177785;
-	--color-primary-regular: #2ca5aa;
+	--color-primary-regular: #2a9ea2;
 	--color-primary-light: #aeedee;
+	--color-primary-lightest: #d8f6f7;
 	--color-accent-dark: #f06630;
 	--color-accent-regular: #ff8a5b;
 	--color-accent-light: #feba9d;
@@ -22,7 +23,7 @@
 	--color-neutral-regular-dark: #647376;
 	--color-neutral-regular: #838f91;
 	--color-neutral-regular-light: #939d9f;
-	--color-neutral-light: #b2b9bb;
+	--color-neutral-light: #dbdedf;
 	--color-neutral-lightest: #e8eaeb;
 	--color-neutral-white: #ffffff;
 	--color-opacity-clear: rgba(0, 0, 0, 0);
