--- a/src/foundations/_variables.scss
+++ b/src/foundations/_variables.scss
@@ -8,16 +8,16 @@
 	--grid-gap-md: 3.5%;
 
 	// Base colors.
-	--color-primary-dark: #177785;
-	--color-primary-regular: #2a9ea2;
+	--color-primary-dark: #147382;
+	--color-primary-regular: #199098;
 	--color-primary-light: #aeedee;
 	--color-primary-lightest: #d8f6f7;
-	--color-accent-dark: #f06630;
-	--color-accent-regular: #ff8a5b;
+	--color-accent-dark: #e24305;
+	--color-accent-regular: #f7662d;
 	--color-accent-light: #feba9d;
 	--color-accent-lightest: #fceade;
-	--color-accent-bright: #e94967;
-	--color-accent-bright-dark: #c5304b;
+	--color-accent-bright: #f6516f;
+	--color-accent-bright-dark: #e13d5b;
 	--color-neutral-darkest: #061f23;
 	--color-neutral-dark: #394c50;
 	--color-neutral-regular-dark: #647376;
