--- a/src/foundations/_variables.scss
+++ b/src/foundations/_variables.scss
@@ -12,15 +12,14 @@
 	--color-primary-regular: #199098;
 	--color-primary-light: #aeedee;
 	--color-primary-lightest: #d8f6f7;
-	--color-accent-dark: #e24305;
-	--color-accent-regular: #f7662d;
+	--color-accent-regular: #ee652b;
 	--color-accent-light: #feba9d;
 	--color-accent-lightest: #fceade;
 	--color-accent-bright: #f6516f;
-	--color-accent-bright-dark: #e13d5b;
+	--color-accent-bright-dark: #e43555;
 	--color-neutral-darkest: #061f23;
-	--color-neutral-dark: #394c50;
-	--color-neutral-regular-dark: #647376;
+	--color-neutral-dark: #4c5657;
+	--color-neutral-regular-dark: #6b7676;
 	--color-neutral-regular: #838f91;
 	--color-neutral-regular-light: #aab2b3;
 	--color-neutral-light: #ccd1d1;
