--- a/src/components/card/_card.scss
+++ b/src/components/card/_card.scss
@@ -32,17 +32,18 @@
 	font-family: var(--typography-font-headings);
 	text-transform: uppercase;
 	font-weight: 700;
-	font-size: 1rem;
+	font-size: 1.125rem;
 	letter-spacing: 0.04em;
-	color: var(--color-primary-dark);
+	color: var(--color-neutral-regular-dark);
 	margin-block-start: 0.75rem;
 }
 
 .card__heading {
 	margin-block-start: 0.75rem;
+	margin-block-end: 0.25rem;
 	h2,
 	h3 {
-		font-size: 1.953rem;
+		font-size: 2rem;
 	}
 }
 
