--- a/src/components/card/_card.scss
+++ b/src/components/card/_card.scss
@@ -14,6 +14,10 @@
 	}
 }
 
+.card--without-image {
+	padding-block-start: 0.5rem;
+}
+
 .card__image {
 	img {
 		width: 100%;
@@ -32,14 +36,15 @@
 	font-family: var(--typography-font-headings);
 	text-transform: uppercase;
 	font-weight: 700;
-	font-size: 1.125rem;
+	font-size: 1.0625rem;
 	letter-spacing: 0.04em;
 	color: var(--color-neutral-regular-dark);
-	margin-block-start: 0.75rem;
+	margin-block-start: 1rem;
+	margin-block-end: -0.25rem;
 }
 
 .card__heading {
-	margin-block-start: 0.75rem;
+	margin-block-start: 1rem;
 	margin-block-end: 0.25rem;
 	h2,
 	h3 {
