--- a/src/components/card/_card.scss
+++ b/src/components/card/_card.scss
@@ -1,6 +1,6 @@
 @use '../../utilities/breakpoints/breakpoints' as *;
 
-.card {
+.sb-card {
 	display: grid;
 	grid-template-rows: auto auto auto 1fr auto;
 	box-sizing: border-box;
@@ -14,25 +14,25 @@
 	}
 }
 
-.card--without-image {
+.sb-card--without-image {
 	padding-block-start: 0.5rem;
 }
 
-.card__image {
+.sb-card__image {
 	img {
 		width: 100%;
 		aspect-ratio: 3 / 2;
 	}
 }
 
-.card__kicker,
-.card__heading,
-.card__bodytext,
-.card__link {
+.sb-card__kicker,
+.sb-card__heading,
+.sb-card__bodytext,
+.sb-card__link {
 	padding-inline: 1.25rem;
 }
 
-.card__kicker {
+.sb-card__kicker {
 	font-family: var(--typography-font-headings);
 	text-transform: uppercase;
 	font-weight: 700;
@@ -43,7 +43,7 @@
 	margin-block-end: -0.25rem;
 }
 
-.card__heading {
+.sb-card__heading {
 	margin-block-start: 1rem;
 	margin-block-end: 0.25rem;
 	h2,
@@ -52,6 +52,6 @@
 	}
 }
 
-.card__link {
+.sb-card__link {
 	margin-block-start: 0.75rem;
 }
