--- a/src/components/card/card.twig
+++ b/src/components/card/card.twig
@@ -1,7 +1,7 @@
-<{{ element_type|default('div') }} class="card{% if not image.src %} card--without-image{% endif %}{% if extra_classes %} {{ extra_classes }}{% endif %}">
+<{{ element_type|default('div') }} class="sb-card{% if not image.src %} sb-card--without-image{% endif %}{% if extra_classes %} {{ extra_classes }}{% endif %}">
 
   {% if image.src %}
-  <div class="card__image">
+  <div class="sb-card__image">
     {% if link %}
     <a href="{{ link.url }}" tabindex="-1" aria-hidden="true">
       <img src="{{ image.src }}" alt="{{ image.alt }}"/>
@@ -13,19 +13,19 @@
   {% endif %}
 
   {% if kicker_text %}
-  <div class="card__kicker">
+  <div class="sb-card__kicker">
     {{ kicker_text }}
   </div>
   {% endif %} 
 
     {% if heading_text and heading_level %}
-    <div class="card__heading">
+    <div class="sb-card__heading">
       <{{ heading_level }}>{{ heading_text }}</{{ heading_level }}>
     </div>
     {% endif %}
 
     {% if body_text %}
-    <div class="card__bodytext">
+    <div class="sb-card__bodytext">
       {# Wrap in paragraph tag if not Drupal site #}
       {% if not db_is_active %}
         <p>{{ body_text }}</p>
@@ -36,7 +36,7 @@
     {% endif %}
 
     {% if link  %}
-    <div class="card__link">
+    <div class="sb-card__link">
       {% include "../link/link.twig" with {
         variant: 'secondary',
         text: link.text,
