--- a/src/utilities/container/container.local.twig
+++ b/src/utilities/container/container.local.twig
@@ -1,5 +1,5 @@
 <div style="background:#eee; padding:1.5rem 0 1rem;">
-	<div class="container">
+	<div class="sb-container">
 		<h3>
 			Section 1
 		</h3>
@@ -11,8 +11,8 @@
 	</div>
 </div>
 <div style="padding:2rem 0 1rem;">
-	<div class="container grid__container">
-		<div class="grid__item grid__item--sm-4 grid__item--md-6">
+	<div class="sb-container sb-grid">
+		<div class="sb-sb-grid__item sb-sb-grid__item--sm-4 sb-sb-grid__item--md-6">
 			<h3>
 				Section 2
 			</h3>
@@ -21,7 +21,7 @@
 				asymmetrical hoodie copper mug chillwave.
 			</p>
 		</div>
-		<div class="grid__item grid__item--sm-4 grid__item--md-6">
+		<div class="sb-sb-grid__item sb-sb-grid__item--sm-4 sb-sb-grid__item--md-6">
 			<h3>
 				Section 3
 			</h3>
