--- a/src/utilities/grid/_grid.scss
+++ b/src/utilities/grid/_grid.scss
@@ -1,49 +1,49 @@
 @use '../breakpoints/_breakpoints.scss' as *;
 
-.grid__container {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  column-gap: var(--grid-gap-sm);
-  row-gap: 1.5rem;
+.sb-grid {
+	display: grid;
+	grid-template-columns: repeat(4, 1fr);
+	column-gap: var(--grid-gap-sm);
+	row-gap: 1.5rem;
 
-  @include breakpoint(medium) {
-    grid-template-columns: repeat(12, 1fr);
-    column-gap: var(--grid-gap-md);
-    row-gap: 1.75rem;
-  }
+	@include breakpoint(medium) {
+		grid-template-columns: repeat(12, 1fr);
+		column-gap: var(--grid-gap-md);
+		row-gap: 1.75rem;
+	}
 }
 
 @include breakpoint(small) {
-  .grid__item {
-    grid-column: span 4;
-  }
+	.sb-grid__item {
+		grid-column: span 4;
+	}
 
-  // Build sm item classes.
-  @for $col from 1 through 4 {
-    .grid__item--sm-#{$col} {
-      grid-column: span $col;
-    }
-  }
+	// Build sm item classes.
+	@for $col from 1 through 4 {
+		.sb-grid__item--sm-#{$col} {
+			grid-column: span $col;
+		}
+	}
 }
 
 @include breakpoint(medium) {
-  .grid__item {
-    grid-column: span 12;
-  }
+	.sb-grid__item {
+		grid-column: span 12;
+	}
 
-  // Build md item classes.
-  @for $col from 1 through 12 {
-    .grid__item--md-#{$col} {
-      grid-column: span $col;
-    }
-  }
+	// Build md item classes.
+	@for $col from 1 through 12 {
+		.sb-grid__item--md-#{$col} {
+			grid-column: span $col;
+		}
+	}
 }
 
 @include breakpoint(large) {
-  // Build lg item classes.
-  @for $col from 1 through 12 {
-    .grid__item--lg-#{$col} {
-      grid-column: span $col;
-    }
-  }
+	// Build lg item classes.
+	@for $col from 1 through 12 {
+		.sb-grid__item--lg-#{$col} {
+			grid-column: span $col;
+		}
+	}
 }
