--- a/src/utilities/container/container.local.twig
+++ b/src/utilities/container/container.local.twig
@@ -12,7 +12,7 @@
 </div>
 <div style="padding:2rem 0 1rem;">
 	<div class="sb-container sb-grid">
-		<div class="sb-sb-grid__item sb-sb-grid__item--sm-4 sb-sb-grid__item--md-6">
+		<div class="sb-grid__item sb-grid__item--sm-4 sb-grid__item--md-6">
 			<h3>
 				Section 2
 			</h3>
@@ -21,7 +21,7 @@
 				asymmetrical hoodie copper mug chillwave.
 			</p>
 		</div>
-		<div class="sb-sb-grid__item sb-sb-grid__item--sm-4 sb-sb-grid__item--md-6">
+		<div class="sb-grid__item sb-grid__item--sm-4 sb-grid__item--md-6">
 			<h3>
 				Section 3
 			</h3>
