Add icon component

--- a/src/components/_index.scss
+++ b/src/components/_index.scss
@@ -1,4 +1,5 @@
 @forward './button/button';
-@forward './link/link';
 @forward './card/card';
+@forward './icon/icon';
+@forward './link/link';
 @forward './tabs/tabs';
