--- a/src/foundations/_variables.scss
+++ b/src/foundations/_variables.scss
@@ -26,11 +26,18 @@
 	--color-neutral-lightest: #edefef;
 	--color-neutral-white: #ffffff;
 	--color-opacity-clear: rgba(0, 0, 0, 0);
-	--color-opacity-black: rgba(0, 0, 0, 0.5);
+	--color-opacity-dark: rgba(6, 31, 35, 0.5);
+
+	// Status colors.
+	--color-status-error-dark: #881330;
+	--color-status-error-regular: #c51b3a;
+	--color-status-error-light: #f5d5d5;
 
 	// Functional colors.
-	--color-functional-focus: var(--color-accent-bright-dark);
+	--color-functional-focus: #004fe0;
+	--color-functional-focus-reverse: #d1e1fa;
 	--color-functional-visited: #630084;
+	--color-functional-text: var(--color-neutral-darkest);
 	--color-functional-disabled-background: var(--color-neutral-regular-light);
 	--color-functional-disabled-text-on-background: var(--color-neutral-lightest);
 	--color-functional-disabled-text: var(--color-neutral-regular);
