Add Modal component

--- a/src/components/_index.scss
+++ b/src/components/_index.scss
@@ -2,5 +2,6 @@
 @forward './card/card';
 @forward './icon/icon';
 @forward './link/link';
+@forward './modal/modal';
 @forward './tabs/tabs';
 @forward './textarea/textarea';
