set up design tokens

--- a/src/sbd-core.css
+++ b/src/sbd-core.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Roboto:ital,wght@0,100..900;1,100..900&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap');
+
+@import url('design-tokens/build/css/tokens.css');
 @import url('foundations/index.css');
 @import url('elements/index.css');
 @import url('components/index.css');
