Begin foundational styles

--- a/src/sbd-core.css
+++ b/src/sbd-core.css
@@ -6,3 +6,14 @@
 @import url('components/index.css');
 @import url('layouts/index.css');
 @import url('utilities/index.css');
+
+html {
+	scroll-behavior: smooth;
+}
+
+body {
+	color: var(--color-foreground);
+	font-family: var(--text-font-sans);
+	overflow-x: hidden;
+	font-weight: var(--text-weight-regular);
+}
