--- a/src/elements/button/button.css
+++ b/src/elements/button/button.css
@@ -1,2 +1,67 @@
 .sb-button {
 }
+
+.sb-button {
+	--background: var(--color-primary-700);
+	--background-hover: var(--color-primary-800);
+	--foreground: var(--color-neutral-000);
+	--border: transparent;
+	--font-size: var(--dimension-m);
+	--padding: var(--dimension-xs) var(--dimension-l);
+
+	background-color: var(--background);
+	border: 1px solid var(--border);
+	border-radius: var(--border-radius-button);
+	color: var(--foreground);
+	display: inline-block;
+	font-family: var(--text-font-display);
+	font-size: var(--font-size);
+	font-weight: var(--text-weight-regular);
+	letter-spacing: 0.015em;
+	line-height: 1;
+	padding: var(--padding);
+	transition: all 0.3s ease-in-out;
+
+	&:hover {
+		background-color: var(--background-hover);
+	}
+}
+
+a.sb-button,
+a.sb-button:hover {
+	text-decoration: none !important;
+}
+
+a.sb-button:focus {
+	outline-offset: 4px;
+}
+
+/* Variations */
+.sb-button--secondary {
+	--background: transparent;
+	--background-hover: var(--color-primary-100);
+	--foreground: var(--color-primary-700);
+	--border: var(--color-primary-700);
+}
+
+.sb-button--critical {
+	--background: transparent;
+	--background-hover: var(--color-status-error-light);
+	--foreground: var(--color-status-error);
+	--border: var(--color-status-error);
+}
+
+/* Size variations */
+.sb-button--sm {
+	--font-size: var(--dimension-s);
+	--padding: var(--dimension-3xs) var(--dimension-s);
+}
+.sb-button--lg {
+	--font-size: var(--dimension-l);
+	--padding: var(--dimension-s) var(--dimension-xl);
+}
+
+.sb-button-group {
+	display: inline-flex;
+	gap: var(--dimension-m);
+}
