--- a/src/layouts/container/container.css
+++ b/src/layouts/container/container.css
@@ -1,6 +1,5 @@
 .sb-container {
 	max-width: var(--dimension-max);
-	margin-left: auto;
-	margin-right: auto;
+	margin-inline: auto;
 	padding-inline: var(--dimension-m);
 }
