More sb and styles config

--- a/src/sb-core.css
+++ b/src/sb-core.css
@@ -22,4 +22,5 @@ p {
 	line-height: var(--text-line-height-md);
 	margin-bottom: var(--dimension-m);
 	font-size: var(--text-size-m);
+	font-weight: var(--text-weight-regular);
 }
