--- a/src/foundations/index.css
+++ b/src/foundations/index.css
@@ -1,2 +1,5 @@
 @import url('./a11y.css');
 @import url('./anchor/anchor.css');
+@import url('./heading/heading.css');
+@import url('./paragraph/paragraph.css');
+@import url('./reset.css');
